konst/tests/misc_tests/iter_eval_no_cmp_feature_ui_tests/cmp_methods_no_cmp_feature_err.stderr
error: iterator comparison methods require the  "cmp" feature
 --> tests/misc_tests/iter_eval_no_cmp_feature_ui_tests/cmp_methods_no_cmp_feature_err.rs:1:31
  |
1 | const _: std::cmp::Ordering = konst::iter::eval!{0..10, cmp(0..10)};
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::iter::__eval2_lowering` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: iterator comparison methods require the  "cmp" feature
 --> tests/misc_tests/iter_eval_no_cmp_feature_ui_tests/cmp_methods_no_cmp_feature_err.rs:3:31
  |
3 | const _: std::cmp::Ordering = konst::iter::eval!{0..10, eq(0..10)};
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::iter::__eval2_lowering` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: iterator comparison methods require the  "cmp" feature
 --> tests/misc_tests/iter_eval_no_cmp_feature_ui_tests/cmp_methods_no_cmp_feature_err.rs:5:31
  |
5 | const _: std::cmp::Ordering = konst::iter::eval!{0..10, ne(0..10)};
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::iter::__eval2_lowering` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: iterator comparison methods require the  "cmp" feature
 --> tests/misc_tests/iter_eval_no_cmp_feature_ui_tests/cmp_methods_no_cmp_feature_err.rs:7:31
  |
7 | const _: std::cmp::Ordering = konst::iter::eval!{0..10, ge(0..10)};
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::iter::__eval2_lowering` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: iterator comparison methods require the  "cmp" feature
 --> tests/misc_tests/iter_eval_no_cmp_feature_ui_tests/cmp_methods_no_cmp_feature_err.rs:9:31
  |
9 | const _: std::cmp::Ordering = konst::iter::eval!{0..10, gt(0..10)};
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::iter::__eval2_lowering` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: iterator comparison methods require the  "cmp" feature
  --> tests/misc_tests/iter_eval_no_cmp_feature_ui_tests/cmp_methods_no_cmp_feature_err.rs:11:31
   |
11 | const _: std::cmp::Ordering = konst::iter::eval!{0..10, le(0..10)};
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::iter::__eval2_lowering` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error: iterator comparison methods require the  "cmp" feature
  --> tests/misc_tests/iter_eval_no_cmp_feature_ui_tests/cmp_methods_no_cmp_feature_err.rs:13:31
   |
13 | const _: std::cmp::Ordering = konst::iter::eval!{0..10, lt(0..10)};
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `$crate::iter::__eval2_lowering` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/misc_tests/iter_eval_no_cmp_feature_ui_tests/cmp_methods_no_cmp_feature_err.rs:3:31
  |
3 | const _: std::cmp::Ordering = konst::iter::eval!{0..10, eq(0..10)};
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Ordering`, found `bool`
  |
  = note: this error originates in the macro `$crate::iter::__eval2_lowering` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/misc_tests/iter_eval_no_cmp_feature_ui_tests/cmp_methods_no_cmp_feature_err.rs:5:31
  |
5 | const _: std::cmp::Ordering = konst::iter::eval!{0..10, ne(0..10)};
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Ordering`, found `bool`
  |
  = note: this error originates in the macro `$crate::iter::__eval2_lowering` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/misc_tests/iter_eval_no_cmp_feature_ui_tests/cmp_methods_no_cmp_feature_err.rs:7:31
  |
7 | const _: std::cmp::Ordering = konst::iter::eval!{0..10, ge(0..10)};
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Ordering`, found `bool`
  |
  = note: this error originates in the macro `$crate::__::matches` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/misc_tests/iter_eval_no_cmp_feature_ui_tests/cmp_methods_no_cmp_feature_err.rs:9:31
  |
9 | const _: std::cmp::Ordering = konst::iter::eval!{0..10, gt(0..10)};
  |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Ordering`, found `bool`
  |
  = note: this error originates in the macro `$crate::__::matches` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/misc_tests/iter_eval_no_cmp_feature_ui_tests/cmp_methods_no_cmp_feature_err.rs:11:31
   |
11 | const _: std::cmp::Ordering = konst::iter::eval!{0..10, le(0..10)};
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Ordering`, found `bool`
   |
   = note: this error originates in the macro `$crate::__::matches` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/misc_tests/iter_eval_no_cmp_feature_ui_tests/cmp_methods_no_cmp_feature_err.rs:13:31
   |
13 | const _: std::cmp::Ordering = konst::iter::eval!{0..10, lt(0..10)};
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Ordering`, found `bool`
   |
   = note: this error originates in the macro `$crate::__::matches` which comes from the expansion of the macro `konst::iter::eval` (in Nightly builds, run with -Z macro-backtrace for more info)
